--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "prepare": "make prepare",
     "pre-commit": "lint-staged && tsc",
     "typecheck": "tsc",
-    "test": "yarn test:unit",
+    "test": "pnpm test:unit",
     "test:unit": "NODE_ENV=test jest '.*\\.spec\\.ts'",
     "obfuscate-mock-ufc": "ts-node test/writeObfuscatedMockUFC",
     "bootstrap-config": "ts-node src/tools/get-bootstrap-config"
@@ -43,46 +43,34 @@
   "homepage": "https://github.com/Eppo-exp/js-client-sdk-common#readme",
   "devDependencies": {
     "@types/jest": "^29.5.11",
-    "@types/js-base64": "^3.3.1",
     "@types/lodash": "^4.17.5",
     "@types/semver": "^7.5.6",
     "@types/spark-md5": "^3.0.5",
-    "@types/uuid": "^10.0.0",
     "@typescript-eslint/eslint-plugin": "^5.13.0",
     "@typescript-eslint/parser": "^5.13.0",
-    "eslint": "^8.17.0",
     "eslint-config-prettier": "^10.0.1",
     "eslint-import-resolver-typescript": "^4.3.4",
     "eslint-plugin-import": "^2.25.4",
     "eslint-plugin-prettier": "5.5.4",
     "eslint-plugin-promise": "^7.2.1",
     "eslint-plugin-unused-imports": "^4.1.4",
+    "eslint": "^8.17.0",
     "jest": "^29.7.0",
     "lodash": "^4.17.21",
-    "prettier": "^3.4.2",
     "prettier-eslint": "^16.3.0",
+    "prettier": "^3.4.2",
     "terser-webpack-plugin": "^5.3.3",
     "testdouble": "^3.20.1",
     "ts-jest": "^29.1.1",
     "ts-loader": "^9.3.1",
     "ts-node": "^10.9.1",
     "typescript": "^5.7.2",
+    "webpack-cli": "^6.0.1",
     "webpack": "^5.73.0",
-    "webpack-cli": "^6.0.1"
-  },
-  "dependencies": {
-    "buffer": "npm:@eppo/buffer@6.2.0",
-    "js-base64": "^3.7.7",
-    "pino": "^9.5.0",
-    "semver": "^7.5.4",
-    "spark-md5": "^3.0.2",
-    "uuid": "^11.0.5",
     "yargs": "^17.7.2"
   },
-  "resolutions": {
-    "//js-yaml": "see https://github.com/advisories/GHSA-mh29-5h37-fv8m",
-    "jest/**/js-yaml": "^3.14.2",
-    "js-yaml": "^4.1.1"
-  },
-  "packageManager": "yarn@1.22.22+sha512.a6b2f7906b721bba3d67d4aff083df04dad64c399707841b7acf00f6b133b7ac24255f2652fa22ae3534329dc6180534e98d17432037ff6fd140556e2bb3137e"
+  "dependencies": {
+    "semver": "^7.5.4",
+    "spark-md5": "^3.0.2"
+  }
 }
