--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "node": ">=18.x"
   },
   "scripts": {
+    "build": "vite build",
     "lint": "eslint '**/*.{ts,tsx}' --cache",
     "lint:fix": "eslint --fix '**/*.{ts,tsx}' --cache",
     "lint:fix-pre-commit": "eslint -c .eslintrc.pre-commit.js --fix '**/*.{ts,tsx}' --no-eslintrc --cache",
@@ -59,6 +60,8 @@
     "ts-jest": "^29.1.1",
     "tsx": "^4.7.0",
     "typescript": "^5.7.2",
+    "vite": "^5.4.0",
+    "vite-plugin-dts": "^4.0.0",
     "yargs": "^17.7.2"
   },
   "dependencies": {
